# overview

./: .env_copy  .gitignore  .pre-commit-config.yaml  1.py  PaperAnalysis.py  README.md  main.ipynb  main.py  pyproject.toml
examples/: Meta-analysis.py  local-paper-analysis.ipynb
examples/Example/md/: 1706.03762v7.md
reduce-llm-hallucinations/: .env_copy  graph_rag_guarded.py  knowledge_base.txt
src/overview/: PaperOverviewAgent.py  __init__.py  agent.py  config.py
src/overview/Analysis/: PaperAnalysis.py  PaperMeta.py
src/overview/tools/: FS.py  VectorStore.py  agent_raise.py  arxiv.py  memory.py  paper_parser.py  pdf_to_md.py  search.py
