[project]
name = "overview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dashscope>=1.24.9",
    "ddgs",
    "deepagents>=0.2.7",
    "dotenv>=0.9.9",
    "feedparser>=6.0.12",
    "langchain>=1.0.3",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.2.0",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.2",
    "markdown>=3.10",
    "pymupdf>=1.26.6",
    "unstructured>=0.18.21",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
per-file-ignores = { "tests/*" = ["S101","ANN","D"] }
select = ["ANN","B","B9","C","E","F","I","S","W","D","DOC","N"]
ignore = ["E203","E501", "ANN401"]
preview = true

[tool.ruff.lint.pydoclint]
ignore-one-line-docstrings = true

[dependency-groups]
dev = [
    "ipywidgets>=8.1.8",
    "notebook>=7.5.0",
    "nox>=2025.10.16",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "ruff>=0.14.3",
]
